# deepstream-6.1

./: .gitignore  LICENSE.txt  README  README.rhel  install.sh  uninstall.sh  version
samples/: prepare_ds_triton_model_repo.sh  trtis_model_repo
samples/configs/deepstream-app/: config_infer_primary.txt  config_infer_primary.yml  config_infer_primary_endv.txt  config_infer_secondary_carcolor.txt  config_infer_secondary_carcolor.yml  config_infer_secondary_carmake.txt  config_infer_secondary_carmake.yml  config_infer_secondary_vehicletypes.txt  config_infer_secondary_vehicletypes.yml  config_mux_source30.txt  config_mux_source4.txt  config_preprocess.txt  config_tracker_NvDCF_accuracy.yml  source1_usb_dec_infer_resnet_int8.txt  source2_1080p_dec_infer-resnet_demux_int8.txt  source30_1080p_dec_infer-resnet_tiled_display_int8.txt  source30_1080p_dec_infer-resnet_tiled_display_int8.yml  source30_1080p_dec_preprocess_infer-resnet_tiled_display_int8.txt  source4_1080p_dec_infer-resnet_tracker_sgie_tiled_display_int8.txt  source4_1080p_dec_infer-resnet_tracker_sgie_tiled_display_int8.yml  source4_1080p_dec_infer-resnet_tracker_sgie_tiled_display_int8_gpu1.txt  sources_30.csv  sources_4.csv
samples/configs/deepstream-app-triton/: README  config_infer_plan_engine_primary.txt  config_infer_primary_classifier_densenet_onnx.txt  config_infer_primary_classifier_inception_graphdef_postprocessInDS.txt  config_infer_primary_classifier_inception_graphdef_postprocessInTriton.txt  config_infer_primary_classifier_mobilenet_v1_graphdef.txt  config_infer_primary_detector_ssd_inception_v2_coco_2018_01_28.txt  config_infer_primary_detector_ssd_mobilenet_v1_coco_2018_01_28.txt  config_infer_secondary_plan_engine_carcolor.txt  config_infer_secondary_plan_engine_carmake.txt  config_infer_secondary_plan_engine_vehicletypes.txt  source1_primary_classifier.txt  source1_primary_detector.txt  source30_1080p_dec_infer-resnet_tiled_display_int8.txt  source4_1080p_dec_infer-resnet_tracker_sgie_tiled_display_int8.txt
samples/configs/deepstream-app-triton-grpc/: README  config_infer_plan_engine_primary.txt  config_infer_secondary_plan_engine_carcolor.txt  config_infer_secondary_plan_engine_carmake.txt  config_infer_secondary_plan_engine_vehicletypes.txt  source30_1080p_dec_infer-resnet_tiled_display_int8.txt  source4_1080p_dec_infer-resnet_tracker_sgie_tiled_display_int8.txt
samples/configs/tao_pretrained_models/: README.md
samples/models/SONYC_Audio_Classifier/: audio_labels.txt  audio_labels_car.txt
samples/triton_model_repo/densenet_onnx/: config.pbtxt
samples/triton_model_repo/mobilenet_v1/: config.pbtxt
samples/triton_model_repo/ssd_mobilenet_v1_coco_2018_01_28/: config.pbtxt
sources/SONYCAudioClassifier/: config_infer_audio_sonyc.txt  ds_audio_sonyc_test_config.txt
sources/SONYCAudioClassifier/gstnvinferaudio_custom_parser/: Makefile  gstnvinferaudio_custom_parser.cpp  gstnvinferaudio_custom_parser.h
sources/apps/sample_apps/deepstream-test2-rtsp/: CMakeLists.txt  Makefile  README  deepstream_test2_app.c  dstest2_pgie_config.yml  dstest2_sgie2_config.yml  dstest2_tracker_config.txt
sources/gst-plugins/gst-dsexample/: Makefile  gstdsexample.cpp  gstdsexample.h  gstdsexample_optimized.cpp
sources/gst-plugins/gst-dsrcl/: CMakeLists.txt  Makefile  README  gstdsrclpublisher.cpp  gstdsrclpublisher.h
sources/gst-plugins/gst-dsrcl/dsmsg/: CMakeLists.txt  package.xml
sources/gst-plugins/gst-dsrcl/dsrcl/: CMakeLists.txt  package.xml
sources/gst-plugins/gst-dsrcl/dsrcl/include/dsrcl/: gstdsrclpublisher.h
sources/gst-plugins/gst-dsrcl/dsrcl/src/: gstdsrclpublisher.cpp
sources/gst-plugins/gst-dsrcl/msg_sub/: CMakeLists.txt  package.xml
sources/gst-plugins/gst-dsrcl/msg_sub/src/: msg_sub.cpp
sources/gst-plugins/gst-nvdsaudiotemplate/: Makefile  README  gstnvdsaudiotemplate.cpp
sources/gst-plugins/gst-nvdsmetautils/: Makefile  README  gstnvdsmetaextract.cpp  gstnvdsmetaextract.h  gstnvdsmetainsert.cpp  gstnvdsmetainsert.h  gstnvdsmetautils.cpp
sources/gst-plugins/gst-nvdsosd/: Makefile  gstnvdsosd.c
sources/gst-plugins/gst-nvdspostprocess/: Makefile  README  config_classifier_car_color.yml  config_classifier_car_make.yml  config_classifier_vehicle_type.yml  config_detector.yml  config_infer_primary_post_process.txt  config_infer_secondary_carcolor_postprocess.txt  config_infer_secondary_carmake_postprocess.txt  config_infer_secondary_vehicletypes_postprocess.txt  config_infer_segmentation_industrial_post_process.txt  config_infer_segmentation_semantic_post_process.txt  config_segmentation_industrial.yml  config_segmentation_semantic.yml  gstnvdspostprocess.cpp  gstnvdspostprocess.h
sources/gst-plugins/gst-nvdspreprocess/: Makefile  README  config_preprocess.txt  gstnvdspreprocess.cpp  gstnvdspreprocess.h  nvdspreprocess_property_parser.cpp  nvdspreprocess_property_parser.h
sources/gst-plugins/gst-nvdsspeech/: README
sources/gst-plugins/gst-nvdsvideotemplate/: Makefile  README  gstnvdsvideotemplate.cpp  gstnvdsvideotemplate.h
sources/gst-plugins/gst-nvmsgbroker/: Makefile  gstnvmsgbroker.cpp
sources/gst-plugins/gst-nvmsgconv/: Makefile  gstnvmsgconv.c
sources/includes/: nvdsinfer_custom_impl.h
sources/libs/nvmsgbroker/: Makefile.test  (+1 more)
sources/objectDetector_FasterRCNN/: README  config_infer_primary_fasterRCNN.txt  config_triton_inferserver_primary_fasterRCNN_custom.txt  config_triton_inferserver_primary_fasterRCNN_detect.txt  deepstream_app_config_fasterRCNN.txt  deepstream_app_triton_config_fasterRCNN.txt
sources/objectDetector_SSD/: README  config_infer_primary_ssd.txt  deepstream_app_config_ssd.txt
sources/objectDetector_Yolo/: README  config_infer_primary_yoloV2.txt  config_infer_primary_yoloV2_tiny.txt  config_infer_primary_yoloV3.txt  config_infer_primary_yoloV3_tiny.txt  config_infer_primary_yoloV5.txt  deepstream_app_config_yoloV2.txt  deepstream_app_config_yoloV2_tiny.txt  deepstream_app_config_yoloV3.txt  deepstream_app_config_yoloV3_tiny.txt  deepstream_app_config_yoloV5.txt  yolov3-calibration.table.trt7.0
sources/tracker_DeepSORT/: README  convert.py
(+331 files in other folders)
